some studies of swagger
